--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,17 @@
 name: Deploy
+
 on:
   push:
     branches:
       - main
+
 jobs:
   deploy:
     name: Deploy CV
     runs-on: ubuntu-latest
+
+    if: contains(github.event.head_commit.message, 'feat') || contains(github.event.head_commit.message, 'fix')
+
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
