--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Check Commit Message
         run: |
-          if [[ "${{ github.event.head_commit.message }}" =~ "feat:" || "${{ github.event.head_commit.message }}" =~ "fix:" ]]; then
-            echo "Commit message contains 'feat' or 'fix', proceeding with deployment..."
+          if [[ "${{ github.event.head_commit.message }}" =~ "feat:" || "${{ github.event.head_commit.message }}" =~ "fix:" || "${{ github.event.head_commit.message }}" =~ "chore:" ]]; then
+            echo "Commit message contains 'feat', 'fix' or 'chore', proceeding with deployment..."
           else
             echo "Commit message does not contain 'feat' or 'fix', skipping deployment."
             exit 78
@@ -28,6 +28,8 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: check_commit_message
+
+    if: contains(github.event.head_commit.message, 'feat') || contains(github.event.head_commit.message, 'fix')
 
     steps:
       - uses: actions/checkout@v3
