chore: testing actions vol1

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ jobs:
   check_commit_message:
     name: Check Commit Message
     runs-on: ubuntu-latest
+    outputs:
+      id: skip
+      value: false
 
     steps:
       - name: Checkout Repository
@@ -18,10 +21,10 @@ jobs:
         run: |
           commit_message="${{ github.event.head_commit.message }}"
           if [[ "$commit_message" == *"feat:"* || "$commit_message" == *"fix:"* ]]; then
-            echo "Commit message contains 'feat', 'fix', or 'chore', proceeding with deployment..."
+            echo "Commit message contains 'feat' or 'fix' proceeding with deployment..."
           else
-            echo "Commit message does not contain 'feat' or 'fix', skipping deployment."
-            echo "::set-output name=skip::true" # Set an output variable to indicate skipping
+            echo "Commit message does not contain 'feat' or 'fix' skipping deployment."
+            echo "skip=true" >> $GITHUB_ENV
           fi
 
   deploy:
