--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
             echo "Commit message contains 'feat' or 'fix' proceeding with deployment..."
           else
             echo "Commit message does not contain 'feat' or 'fix' skipping deployment."
-            echo "skip=true" >> $GITHUB_ENV
+            exit 1
           fi
 
   deploy:
@@ -32,8 +32,6 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: check_commit_message
-
-    if: needs.check_commit_message.outputs.skip != 'true'
 
     steps:
       - uses: actions/checkout@v3
