--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Check Commit Message
         run: |
           commit_message="${{ github.event.head_commit.message }}"
-          if [[ "$commit_message" == *"feat:"* || "$commit_message" == *"fix:"* ]]; then
-            echo "Commit message contains 'feat' or 'fix' proceeding with deployment..."
+          if [[ "$commit_message" == *"feat:"* || "$commit_message" == *"fix:"* || "$commit_message" == *"chore:"* ]]; then
+            echo "Commit message contains 'feat', 'fix', or 'chore', proceeding with deployment..."
           else
-            echo "Commit message does not contain 'feat' or 'fix' skipping deployment."
+            echo "Commit message does not contain 'feat', 'fix', or 'chore', skipping deployment."
             exit 78
           fi
 
@@ -29,6 +29,10 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: check_commit_message
+
+    if: |
+      contains(github.event.head_commit.message, 'feat') ||
+      contains(github.event.head_commit.message, 'fix')
 
     steps:
       - uses: actions/checkout@v3
