--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,17 @@ actix-web = { version = "4", optional = true, features = ["macros"] }
 console_error_panic_hook = "0.1"
 cfg-if = "1"
 http = { version = "0.2", optional = true }
-leptos = { version = "0.5", features = ["nightly"] }
+leptos = { version = "0.5", features = ["nightly", "experimental-islands"] }
 leptos_meta = { version = "0.5", features = ["nightly"] }
-leptos_actix = { version = "0.5", optional = true }
+leptos_actix = { version = "0.5", optional = true, features = [
+  "experimental-islands",
+]}
 leptos_router = { version = "0.5", features = ["nightly"] }
 wasm-bindgen = "0.2"
 rand = "0.8.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.11", features = ["rustls-tls"] }
 
 [dependencies.web-sys]
 version = "0.3.65"
