--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.11", features = ["rustls-tls"] }
 leptos-use = "0.9.0"
+ammonia = "3.3.0"
 
 [dependencies.web-sys]
 version = "0.3.65"
