--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy Prod
+name: Deploy Staging
 
 on:
   push:
     branches:
-      - main
+      - staging
 
 jobs:
   check_commit_message:
@@ -25,7 +25,7 @@ jobs:
           fi
 
   deploy:
-    name: Deploy Web
+    name: Deploy Web to Staging
     runs-on: ubuntu-latest
 
     needs: check_commit_message
