--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ serde_json = "1.0"
 reqwest = { version = "0.11", features = ["rustls-tls"] }
 leptos-use = "0.9.0"
 ammonia = "3.3.0"
+chrono-tz = "0.8.6"
+chrono = "0.4.34"
 
 [dependencies.web-sys]
 version = "0.3.65"
