--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for leptos-cv-fragrant-wave-2284 on 2023-12-03T11:36:50+01:00
+# fly.toml app configuration file generated for leptos-cv-polished-sound-4979 on 2024-02-28T16:05:22+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "leptos-cv"
-primary_region = "ams"
+app = 'leptos-cv-polished-sound-4979'
+primary_region = 'ams'
 
 [build]
 
@@ -14,9 +14,9 @@ primary_region = "ams"
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '2gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
