--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,7 @@ leptos-use = "0.9.0"
 ammonia = "3.3.0"
 chrono-tz = "0.8.6"
 chrono = "0.4.34"
-
-[dependencies.web-sys]
-version = "0.3.65"
-features = ["Document", "Element", "Performance", "EventTarget", "HtmlCanvasElement", "MouseEvent", "WebGlBuffer", "WebGlProgram", "WebGlRenderingContext", "WebGlShader", "WebGlUniformLocation", "Window"]
+gloo-timers = "0.3.0"
 
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
