--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ chrono-tz = "0.8.6"
 chrono = "0.4.34"
 gloo-timers = "0.3.0"
 
+[dependencies.web-sys]
+version = "0.3.65"
+features = ["Document", "Element", "Performance", "EventTarget", "HtmlCanvasElement", "MouseEvent", "WebGlBuffer", "WebGlProgram", "WebGlRenderingContext", "WebGlShader", "WebGlUniformLocation", "Window"]
+
 [features]
 csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
 hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
