--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for leptos-cv-polished-sound-4979 on 2024-02-28T16:05:22+01:00
+# fly.toml app configuration file generated for leptos-cv-fragrant-wave-2284 on 2023-12-03T11:36:50+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'leptos-cv-polished-sound-4979'
+app = 'leptos-cv'
 primary_region = 'ams'
 
 [build]
