--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,9 @@ actix-web = { version = "4", optional = true, features = ["macros"] }
 console_error_panic_hook = "0.1"
 cfg-if = "1"
 http = { version = "0.2", optional = true }
-leptos = { version = "0.5", features = ["nightly", "experimental-islands"] }
+leptos = { version = "0.5", features = ["nightly"] }
 leptos_meta = { version = "0.5", features = ["nightly"] }
-leptos_actix = { version = "0.5", optional = true, features = [
-  "experimental-islands",
-]}
+leptos_actix = { version = "0.5", optional = true, features = []}
 leptos_router = { version = "0.5", features = ["nightly"] }
 wasm-bindgen = "0.2"
 rand = "0.8.5"
